Fixed layout mobile in bg overflow

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,19 +1,16 @@
-//@import url('https://fonts.googleapis.com/css?family=Audiowide');
 @import url('https://fonts.googleapis.com/css?family=Cinzel:400,700,900');
-//@import url('https://fonts.googleapis.com/css?family=Lora:400,700');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
-//@import url('https://fonts.googleapis.com/css?family=Amiri:400,400i,700,700i');
-//@import url('https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre');
-//@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700');
-//@import url('https://fonts.googleapis.com/css?family=Rozha+One');
-//@import url('https://fonts.googleapis.com/css?family=Faster+One');
-//@import url('https://fonts.googleapis.com/css?family=Lobster');
-//@import url('https://fonts.googleapis.com/css?family=Oswald');
-//@import url('https://fonts.googleapis.com/css?family=Philosopher');
-//@import url('https://fonts.googleapis.com/css?family=Julius+Sans+One');
 
 body{
     background: $white;
     font-size: 15px;
     overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+#app{
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
